--- a/index.html
+++ b/index.html
@@ -8,6 +8,55 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <header class="p-3 mb-2 bg-info text-white">
+<h1 title="github.com">Σχεδιασμός και ανάπτυξη ιστοσελίδων</h1>
+
+<h3>Αποθετήριο Ασκήσεων</h3>
+ 
+</header>
+  
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <a class="navbar-brand" href="index.html">Menu</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="thess">Θεσσαλονίκη</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="bootstrap" tabindex="-1">Bootstrap</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="bootstrap2" tabindex="-1">Bootstrap 2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="album" tabindex="-1">Album</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          More
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="video">Video</a>
+          <a class="dropdown-item" href="table">Table</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="symbols">Symbols</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
 <div> Πήρα το <i class="fa fa-taxi" aria-hidden="true"></i> και πήγα στο <i class="fa fa-university" aria-hidden="true"></i>
 για να <i class="fa fa-paper-plane" aria-hidden="true"></i> ένα <i class="fa fa-file" aria-hidden="true"></i>
 </div>
